# rust-ocr

./: .gitignore  Cargo.toml  LICENSE  README.md  list.json
src/: libs.rs  main.rs
