[package]
name = "rust_ocr"
version = "0.1.0"
edition = "2021"
authors= ["reyemhorts"]
description = "A library to convert png to text with windows api"
license = "MIT"

[lib]
name = "rust_ocr"
path = "src/libs.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1",features=["derive","alloc"]}
serde_json = "1.0.87"

[dependencies.windows]
version = "0.43.0"
features = [
    "Media_Ocr",
    "Graphics",
    "Graphics_Imaging",
    "Globalization",
    "Storage",
    "Foundation",
    "Storage_Streams",
    "Foundation_Collections"
]